force-app/main/default/objects/Account_Plans__c/Account_Plans__c.object-meta.xml
<CustomObject>
    <label>Account Plan</label>
    <nameField>
        <label>Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>