force-app/main/default/objects/Account_Plans__c/fields/Client_IT_Landscape__c.field-meta.xml
<CustomField>
    <fullName>Client_IT_Landscape__c</fullName>
    <label>Client IT Landscape (max 1000 letters)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>