force-app/main/default/objects/Account_Plans__c/fields/Client_Organization_Towers__c.field-meta.xml
<CustomField>
    <fullName>Client_Organization_Towers__c</fullName>
    <label>Client Organization/Towers</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>