force-app/main/default/objects/Account_Plans__c/fields/Competitive_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Analysis__c</fullName>
    <label>Competitive Analysis</label>
    <type>TextArea</type>
</CustomField>