force-app/main/default/objects/Account_Plans__c/fields/Customer_Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>Customer_Pain_Points__c</fullName>
    <label>Customer Pain Points</label>
    <type>TextArea</type>
</CustomField>