force-app/main/default/objects/Account_Plans__c/fields/Key_Business_Priorities_of_Client__c.field-meta.xml
<CustomField>
    <fullName>Key_Business_Priorities_of_Client__c</fullName>
    <label>Key Business Priorities of Client</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>