force-app/main/default/objects/Account_Plans__c/fields/Major_Events__c.field-meta.xml
<CustomField>
    <fullName>Major_Events__c</fullName>
    <label>Major Events</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>