force-app/main/default/objects/Account_Plans__c/fields/Organization_Size__c.field-meta.xml
<CustomField>
    <fullName>Organization_Size__c</fullName>
    <label>Organization Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>