force-app/main/default/objects/Account_Plans__c/fields/Our_Business_Goals_Projects_we_want_to__c.field-meta.xml
<CustomField>
    <fullName>Our_Business_Goals_Projects_we_want_to__c</fullName>
    <label>Our Business Goals &amp; Projects we want to</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>