force-app/main/default/objects/Account_Plans__c/fields/Our_Revenue_Targets__c.field-meta.xml
<CustomField>
    <fullName>Our_Revenue_Targets__c</fullName>
    <label>Our Revenue Targets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>