force-app/main/default/objects/Account_Plans__c/fields/Our_stakeholders_by_tower__c.field-meta.xml
<CustomField>
    <fullName>Our_stakeholders_by_tower__c</fullName>
    <label>Our stakeholders by tower</label>
    <type>TextArea</type>
</CustomField>