force-app/main/default/objects/Account_Plans__c/fields/Potential_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Potential_Revenue__c</fullName>
    <label>Company Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>