force-app/main/default/objects/Account_Plans__c/fields/Risk_Factors__c.field-meta.xml
<CustomField>
    <fullName>Risk_Factors__c</fullName>
    <label>Risk Factors</label>
    <type>TextArea</type>
</CustomField>