force-app/main/default/objects/Account_Plans__c/fields/Significance_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Significance_of_Account__c</fullName>
    <label>Significance of Account</label>
    <type>TextArea</type>
</CustomField>