force-app/main/default/objects/Account_Plans__c/fields/Strategic_Project_Initiatives_of_client__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Project_Initiatives_of_client__c</fullName>
    <label>Strategic Project Initiatives of client</label>
    <type>TextArea</type>
</CustomField>